# ai-automation-assistant

./: .gitignore  LICENSE  README.md  ai-research-report.md  pyproject.toml
autoflow/: config.py
autoflow/cli/: main.py
autoflow/core/: engine.py  models.py  state.py
autoflow/llm/: __init__.py  base.py  ollama.py  openai_compat.py
autoflow/planner/: planner.py
autoflow/schemas/: workflow.py
autoflow/tools/: __init__.py  base.py  code_exec.py  file_ops.py  llm_tool.py  web_search.py
docs/: architecture.md  getting-started.md  screenshots.md
examples/: code-gen.json  research.json
scripts/: generate_screenshots.py
