[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoflow"
version = "0.1.0"
description = "AI Workflow Automation Assistant — NL-driven multi-step task orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Akarsh"}]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "ollama>=0.4",
    "duckduckgo_search>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
autoflow = "autoflow.cli.main:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "autoflow.tools.*"
disable_error_code = ["override"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
